bug fix, adding new methods to swagger docs
