# src/backend/entry/docs/swagger.yaml
@@ -122,6 +122,33 @@ paths:
       summary: Get entries by date
       tags:
       - Entries
+  /api/entries/exactTitle:
+    get:
+      description: Retrieves entry that matches exactly the given title.
+      parameters:
+      - description: Title to search
+        in: query
+        name: title
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Entry'
+        "404":
+          description: Entry not found
+          schema:
+            type: string
+        "500":
+          description: Internal server error
+          schema:
+            type: string
+      summary: Get entries by title
+      tags:
+      - Entries
   /api/entries/health:
     get:
       description: Checks if the service is up
@@ -235,7 +262,7 @@ paths:
       - Entries
   /api/entries/title:
     get:
-      description: Retrieves entries that match the given title.
+      description: Retrieves the list of all entries that matches the title.
       parameters:
       - description: Title to search
         in: query
@@ -248,16 +275,14 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/model.Entry'
-        "404":
-          description: Entry not found
-          schema:
-            type: string
+            items:
+              $ref: '#/definitions/model.Entry'
+            type: array
         "500":
           description: Internal server error
           schema:
             type: string
-      summary: Get entries by title
+      summary: Get all entries by title.
       tags:
       - Entries
   /api/entries/wiki:
