# src/backend/entry/handler/entry_handler.go
@@ -272,17 +272,17 @@ func PutEntry(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// GetEntriesByTitle godoc
+// GetEntryByExactTitle godoc
 // @Summary      Get entries by title
-// @Description  Retrieves entries that match the given title.
+// @Description  Retrieves entry that matches exactly the given title.
 // @Tags         Entries
 // @Produce      application/json
 // @Param        title  query     string  true  "Title to search"
 // @Success      200    {object}  model.Entry
 // @Failure      404    {string}  string  "Entry not found"
 // @Failure      500    {string}  string  "Internal server error"
-// @Router       /api/entries/title [get]
-func GetEntriesByTitle(w http.ResponseWriter, r *http.Request) {
+// @Router       /api/entries/exactTitle [get]
+func GetEntryByExactTitle(w http.ResponseWriter, r *http.Request) {
 	title := r.URL.Query().Get("title")
 
 	var entry model.Entry
@@ -299,6 +299,60 @@ func GetEntriesByTitle(w http.ResponseWriter, r *http.Request) {
 
 	w.Header().Set("Content-Type", "application/json")
 	if err := json.NewEncoder(w).Encode(entry); err != nil {
+		config.App.Logger.Error().Err(err).Msg("Failed to encode response")
+		http.Error(w, "Internal server error", http.StatusInternalServerError)
+		return
+	}
+}
+
+// GetEntriesByTitle godoc
+// @Summary      Get all entries by title.
+// @Description  Retrieves the list of all entries that matches the title.
+// @Tags         Entries
+// @Produce      application/json
+// @Param        title  query     string  true  "Title to search"
+// @Success      200  {array}   model.Entry
+// @Failure      500  {string}  string  "Internal server error"
+// @Router       /api/entries/title [get]
+func GetEntriesByTitle(w http.ResponseWriter, r *http.Request) {
+	title := r.URL.Query().Get("title")
+	var entries []model.Entry
+	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
+	defer cancel()
+	filter := bson.M{
+		"title": bson.M{
+			"$regex":   title,
+			"$options": "i",
+		},
+	}
+	cursor, err := database.EntryCollection.Find(ctx, filter)
+	if err != nil {
+		config.App.Logger.Error().Err(err).Msg("Database error")
+		http.Error(w, "Internal server error", http.StatusInternalServerError)
+		return
+	}
+	defer cursor.Close(ctx)
+	for cursor.Next(ctx) {
+		var entry model.Entry
+		if err := cursor.Decode(&entry); err != nil {
+			config.App.Logger.Error().Err(err).Msg("Failed to decode entry")
+			http.Error(w, "Internal server error", http.StatusInternalServerError)
+			return
+		}
+		entries = append(entries, entry)
+	}
+	if err := cursor.Err(); err != nil {
+		config.App.Logger.Error().Err(err).Msg("Cursor error")
+		http.Error(w, "Internal server error", http.StatusInternalServerError)
+		return
+	}
+	if len(entries) == 0 {
+		config.App.Logger.Info().Str("title", title).Msg("No entries found")
+		http.Error(w, "No entries found", http.StatusNotFound)
+		return
+	}
+	w.Header().Set("Content-Type", "application/json")
+	if err := json.NewEncoder(w).Encode(entries); err != nil {
 		config.App.Logger.Error().Err(err).Msg("Failed to encode response")
 		http.Error(w, "Internal server error", http.StatusInternalServerError)
 		return
@@ -347,7 +401,7 @@ func GetEntriesByAuthor(w http.ResponseWriter, r *http.Request) {
 	}
 
 	if len(entries) == 0 {
-		config.App.Logger.Warn().Strs("authors", authors).Msg("No entries found")
+		config.App.Logger.Warn().Strs("author", author).Msg("No entries found")
 		http.Error(w, "No entries found", http.StatusNotFound)
 		return
 	}
